--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,17 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.navbar-nav .nav-link.active,
+
+.app-container {
+  .header-container {
+    .navbar-nav {
+      .nav-link {
+        &.active {
+          color: pink;
+        }
+      }
+    }
+  }
+}
