--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,8 @@ body {
 .app-container {
   .header-container {
     .navbar-nav {
+      opacity: 0.8;
+
       .nav-link {
         &.active {
           color: pink;
@@ -20,4 +22,11 @@ body {
       }
     }
   }
+}
+
+video {
+  position: fixed;
+  // bottom: 0;
+
+  // width: 100vw;
 }
